--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ a:hover {
 /* SECTIONS */
 
 section {
-  padding-top: 4vh;
   height: 96vh;
   margin: 0 10rem;
   box-sizing: border-box;
@@ -167,6 +166,7 @@ section {
   justify-content: center;
   gap: 5rem;
   height: 80vh;
+  margin-bottom: 3rem;
 }
 
 .section_pic-container {
@@ -260,6 +260,7 @@ section {
 
 #about {
   position: relative;
+  margin-bottom: 3rem;
 }
 
 .about-containers {
@@ -279,6 +280,8 @@ section {
 }
 
 .about-pic {
+  height: 400px;
+  width: 400px;
   border-radius: 2rem;
 }
 
@@ -304,7 +307,5 @@ section {
 }
 
 .section_pic-container {
-  height: 400px;
-  width: 400px;
   margin: auto 0;
 }
