--- a/style.css
+++ b/style.css
@@ -309,3 +309,47 @@ section {
 .section_pic-container {
   margin: auto 0;
 }
+
+/* EXPERIENCE SECTION */
+
+#experience {
+  position: relative;
+  margin-bottom: 3rem;
+}
+
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+  margin-bottom: 1rem;
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
+  height: 35px;
+  width: 35px;
+  padding-top: 0.5rem;
+}
