Add footer to the page

--- a/style.css
+++ b/style.css
@@ -420,3 +420,14 @@ article .icon {
 .email-icon {
   height: 2.5rem;
 }
+
+/* FOOTER SECTION */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
